--- a/src/assets/css/Card/card.html
+++ b/src/assets/css/Card/card.html
@@ -16,14 +16,14 @@
             <div class="circle card-c2"></div>
             <div class="top">
                 <div class="logo">
-                    <img src="./img/png/logo.png" alt="">
+                    <img src="./img/png/logo.png" alt="HyFi">
                 </div>
                 <div class="pay">
-                    <img src="./img/svg/pay.svg" alt="">
+                    <img src="./img/svg/pay.svg" alt="HyFi">
                 </div>
             </div>
             <div class="chip">
-                <img src="./img/svg/chip.svg" alt="">
+                <img src="./img/svg/chip.svg" alt="HyFi">
             </div>
             <div class="number">5040 0987 5100 7453</div>
             <div class="bottom">
@@ -36,7 +36,7 @@
                 </div>
                 <div class="right">
                     <div class="logo">
-                        <img src="./img/png/logos_mastercard.png" alt="">
+                        <img src="./img/png/logos_mastercard.png" alt="HyFi">
                     </div>
                 </div>
             </div>
