--- a/public/index.html
+++ b/public/index.html
@@ -12,25 +12,25 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <meta name="description" content="HyFi - The serene banking alternative." />
-    <meta property="og:image" content=https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png">
     <meta property="og:site_name" content="HyFi"/>
     <meta property="og:title" content="HyFi"/>
     <meta property="og:url" content="-- website --"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="HyFi - The serene banking alternative."/>
-    <meta property="og:image" content=https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png"/>
+    <meta property="og:image" content="https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png"/>
     
     <meta itemprop="name" content="HyFi"/>
     <meta itemprop="url" content="-- website --"/>
     <meta itemprop="description" content="HyFi - The serene banking alternative."/>
     <meta itemprop="thumbnailUrl" content=""/>
-    <link rel="image_src" href=https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png"/>
-    <meta itemprop="image" content=https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png"/>
+    <link rel="image_src" href="https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png"/>
+    <meta itemprop="image" content="https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png"/>
     
     <meta name="twitter:url" content="-- website --"/>
     <meta name="twitter:title" content="HyFi">
     <meta name="twitter:description" content="HyFi - The serene banking alternative.">
-    <meta name="twitter:image" content=https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png">
     <meta name="twitter:card" content="summary"/>
 
     <title>HyFi</title>
