--- a/public/index.html
+++ b/public/index.html
@@ -15,19 +15,19 @@
     <meta property="og:image" content="https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png">
     <meta property="og:site_name" content="HyFi"/>
     <meta property="og:title" content="HyFi"/>
-    <meta property="og:url" content="-- website --"/>
+    <meta property="og:url" content="https://hyfi.netlify.app/"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="HyFi - The serene banking alternative."/>
     <meta property="og:image" content="https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png"/>
     
     <meta itemprop="name" content="HyFi"/>
-    <meta itemprop="url" content="-- website --"/>
+    <meta itemprop="url" content="https://hyfi.netlify.app/"/>
     <meta itemprop="description" content="HyFi - The serene banking alternative."/>
     <meta itemprop="thumbnailUrl" content=""/>
     <link rel="image_src" href="https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png"/>
     <meta itemprop="image" content="https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png"/>
     
-    <meta name="twitter:url" content="-- website --"/>
+    <meta name="twitter:url" content="https://hyfi.netlify.app/"/>
     <meta name="twitter:title" content="HyFi">
     <meta name="twitter:description" content="HyFi - The serene banking alternative.">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/PhantomScript/asset-container/main/HyFi/logo.png">
